Fix issue with nested sticky elements for webkit?
Should fix table headers from shifting too much downward on Safari and
other webkit-based browsers (which apparently includes Chrome on iOS)

--- a/assets/results_template/style.scss
+++ b/assets/results_template/style.scss
@@ -223,7 +223,15 @@ table.results-classic {
     padding: 0;
   }
 
-  th, thead {
+  // for Firefox/Safari
+  thead {
+    position: sticky;
+    top: 12.5em;
+  }
+
+  // for Chrome/Edge
+  th {
+    /* autoprefixer: ignore next */
     position: sticky;
     top: 12.5em;
   }
